@@ -1,65 +1,44 @@
 /**
- * @file src/python/ip/src/zigzag.cc 
- * @author <a href="mailto:Laurent.El-Shafey@idiap.ch">Laurent El Shafey</a> 
+ * @author Laurent El Shafey <Laurent.El-Shafey@idiap.ch>
+ * @author Andre Anjos <andre.anjos@idiap.ch>
+ * @date Sun 20 Nov 17:27:22 2011 CET
  *
  * @brief Binds the zigzag operation into python 
  */
 
-#include <boost/python.hpp>
-
+#include "core/python/ndarray.h"
 #include "ip/zigzag.h"
 
 using namespace boost::python;
+namespace tp = Torch::python;
+namespace ip = Torch::ip;
+namespace ca = Torch::core::array;
 
-static const char* ZIGZAG2D_DOC = "Extract a 1D blitz array using a zigzag pattern from a 2D blitz array/image.";
+template <typename T>
+static void inner_zigzag(tp::const_ndarray src, tp::ndarray dst, int nc,
+    bool rf) {
+  blitz::Array<T,1> dst_ = dst.bz<T,1>();
+  ip::zigzag<T>(src.bz<T,2>(), dst_, nc, rf);
+}
 
+static void zigzag (tp::const_ndarray src, tp::const_ndarray dst,
+    int nc=0, bool rf=false) {
+  
+  const ca::typeinfo& info = src.type();
+  
+  if (info.nd != 2) PYTHON_ERROR(TypeError, "zigzag does not support input of type '%s'", info.str().c_str());
 
-#define ZIGZAG_DECL(T,N) \
-  BOOST_PYTHON_FUNCTION_OVERLOADS(zigzag_overloads_ ## N, Torch::ip::zigzag<T>, 2, 4)
+  switch (info.dtype) {
+    case ca::t_uint8: return inner_zigzag<uint8_t>(src, dst, nc, rf);
+    case ca::t_uint16: return inner_zigzag<uint16_t>(src, dst, nc, rf);
+    case ca::t_float64: return inner_zigzag<double>(src, dst, nc, rf);
+    default: PYTHON_ERROR(TypeError, "zigzag does not support type '%s'", info.str().c_str());
+  }
 
-#define ZIGZAG_DEF(T,N) \
-  def("zigzag", (void (*)(const blitz::Array<T,2>&, blitz::Array<T,1>&, int, const bool))&Torch::ip::zigzag<T>, zigzag_overloads_ ## N ((arg("src"), arg("dst"), arg("n_coef")=0, arg("right_first")=false), ZIGZAG2D_DOC)); 
+}
 
-/*
-ZIGZAG_DECL(bool,bool)
-ZIGZAG_DECL(int8_t,int8)
-ZIGZAG_DECL(int16_t,int16)
-ZIGZAG_DECL(int32_t,int32)
-ZIGZAG_DECL(int64_t,int64)
-*/
-ZIGZAG_DECL(uint8_t,uint8)
-ZIGZAG_DECL(uint16_t,uint16)
-/*
-ZIGZAG_DECL(uint32_t,uint32)
-ZIGZAG_DECL(uint64_t,uint64)
-ZIGZAG_DECL(float,float32)
-*/
-ZIGZAG_DECL(double,float64)
-/*
-ZIGZAG_DECL(std::complex<float>,complex64)
-ZIGZAG_DECL(std::complex<double>,complex128)
-*/
+BOOST_PYTHON_FUNCTION_OVERLOADS(zigzag_overloads, zigzag, 2, 4)
 
-
-void bind_ip_zigzag()
-{
-/*
-  ZIGZAG_DEF(bool,bool)
-  ZIGZAG_DEF(int8_t,int8)
-  ZIGZAG_DEF(int16_t,int16)
-  ZIGZAG_DEF(int32_t,int32)
-  ZIGZAG_DEF(int64_t,int64)
-*/
-  ZIGZAG_DEF(uint8_t,uint8)
-  ZIGZAG_DEF(uint16_t,uint16)
-/*
-  ZIGZAG_DEF(uint32_t,uint32)
-  ZIGZAG_DEF(uint64_t,uint64)
-  ZIGZAG_DEF(float,float32)
-*/
-  ZIGZAG_DEF(double,float64)
-/*
-  ZIGZAG_DEF(std::complex<float>,complex64)
-  ZIGZAG_DEF(std::complex<double>,complex128)
-*/
+void bind_ip_zigzag() {
+  def("zigzag", &zigzag, zigzag_overloads((arg("src"), arg("dst"), arg("n_coef")=0, arg("right_first")=false), "Extract a 1D array using a zigzag pattern from a 2D array/image."));
 }
